--- a/Back/package.json
+++ b/Back/package.json
@@ -15,10 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.3.5",
     "vercel": "^32.6.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
