--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
         - name: Build and push
           uses: docker/build-push-action@v2
           with:
-            context: ./Back
-            file: ./Dockerfile
+            context: ./
+            file: ./Back/Dockerfile
             push: true
             tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp-back:latest
           
