--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,19 +33,18 @@ jobs:
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-        - name: Build and push
+        - name: Build and push Back
           uses: docker/build-push-action@v2
           with:
             context: ./Back
             file: ./Back/Dockerfile
             push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp-back:latest
-          
-        - name: Run the image in a container
-          uses: addnab/docker-run-action@v3
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp-front:latest
+
+        - name: Build and push Front
+          uses: docker/build-push-action@v2
           with:
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp-back:latest
-            run: |
-              echo "runing the docker image"
-              echo "Testing the nodejs  app endpoints"
-              echo ${{ steps.docker_build.outputs.digest }}
+            context: ./Front
+            file: ./Front/Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp-front:latest
