--- a/Back/package.json
+++ b/Back/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^133.0.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.9",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
