--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -22,6 +22,9 @@ FROM nginx:alpine
 # Copy the built React app to Nginx's web server directory
 COPY --from=build /app/dist /usr/share/nginx/html
 
+#copy conf file
+COPY nginx.conf /etc/nginx/nginx.conf
+
 # Expose port 80 for the Nginx server
 EXPOSE 80
 
