--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,9 +52,11 @@ jobs:
             node-version: '16'
       
         - name: Install NPM Modules
+          working-directory: ./Front
           run: npm install
 
         - name: Build Project
+          working-directory: ./Front
           run: CI= npm run build
           
         - name: Create SSH key
