--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,10 @@ jobs:
           run: |
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-              ssh-keyscan dev.serviapp.solutions > ~/.ssh/known_hosts
+              ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts
                   
         - name: Deploy with rsync
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
-              rsync -rav --delete Front/dist/ ubuntu@dev.serviapp.solutions:/var/www/dev.serviapp.solutions/public_html/
+              rsync -rav --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/dev.serviapp.solutions/public_html/
               ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
