feat: fix cicd lastone disable errors again 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,10 @@ jobs:
         - name: run script stop container and clean
           run: |
               ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
-              
+        - name: run script run container
+          run: |
+              ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev2.sh
+
         - name: Deploy with rsync
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
