--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,28 +21,28 @@ jobs:
       if: github.ref == 'refs/heads/Develop' # run this job only for the dev branch
 
       steps:
-        - name: checkout repo
-          uses: actions/checkout@v2
-
-        - name: Set up QEMU
-          uses: docker/setup-qemu-action@v1
-      
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-
-        - name: Login to DockerHub
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-        - name: Build and push Back
-          uses: docker/build-push-action@v2
-          with:
-            context: ./Back
-            file: ./Back/Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp:back-${{ github.ref_name }}
+#        - name: checkout repo
+#          uses: actions/checkout@v2
+#
+#        - name: Set up QEMU
+#          uses: docker/setup-qemu-action@v1
+#      
+#        - name: Set up Docker Buildx
+#          uses: docker/setup-buildx-action@v1
+#
+#        - name: Login to DockerHub
+#          uses: docker/login-action@v1
+#          with:
+#            username: ${{ secrets.DOCKERHUB_USERNAME }}
+#            password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      
+#        - name: Build and push Back
+#          uses: docker/build-push-action@v2
+#          with:
+#            context: ./Back
+#            file: ./Back/Dockerfile
+#            push: true
+#            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp:back-${{ github.ref_name }}
 #deploy frontend
         - name: checkout repo
           uses: actions/checkout@v2
@@ -65,13 +65,13 @@ jobs:
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts
-                  
-        - name: run script dev backend
+        #Back          
+        - name: run Deploy Back
           run: |
               rsync -rav --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/dev/c16-28-n-node-react/Back/
               ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
-        #test 3
-        - name: Deploy with rsync
+        #Front
+        - name: Deploy Front
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
               rsync -rav --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/dev.serviapp.solutions/public_html/
