--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts
         #Back          
-        - name: run Deploy Back
+        - name: Deploy Back
           run: |
               rsync -rav --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/dev/c16-28-n-node-react/Back/
               ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
@@ -107,14 +107,13 @@ jobs:
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts                 
- #       - name: run script stop container and clean
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
- #       - name: run script run container
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev2.sh
-        #test 3
-        - name: Deploy with rsync
+        #Back          
+        - name: Deploy Back
+          run: |
+              rsync -rav --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/qa/c16-28-n-node-react/Back/
+              ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/qa/qa.sh
+        #Front
+        - name: Deploy Front
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
               rsync -rav --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/qa.serviapp.solutions/public_html/
@@ -150,13 +149,12 @@ jobs:
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts                 
- #       - name: run script stop container and clean
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
- #       - name: run script run container
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev2.sh
-        #test 3
+        #Back          
+        - name: Deploy Back
+          run: |
+              rsync -rav --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/prod/c16-28-n-node-react/Back/
+              ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/prod/prod.sh
+        #Front
         - name: Deploy with rsync
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
