--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on: [push] #to any branch
   #workflow_dispatch:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
   # This workflow contains multiple jobs
 
@@ -20,6 +21,10 @@ jobs:
 #Deploy dev      
       if: github.ref == 'refs/heads/Develop' # run this job only for the dev branch
 
+      defaults:
+      run:
+          shell: bash -ileo pipefail {0} 
+          
       steps:
 #        - name: checkout repo
 #          uses: actions/checkout@v2
@@ -67,7 +72,6 @@ jobs:
         #Back          
         - name: Deploy Back
           run: |
-              shell: bash -ileo pipefail {0} 
               rsync -ra --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/dev/c16-28-n-node-react/Back/
               ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
         #Front
