feat: add back scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 #Deploy dev      
       if: github.ref == 'refs/heads/Develop' # run this job only for the dev branch
       steps:
-#        - name: checkout repo
+#        - name: checkout repo#
 #          uses: actions/checkout@v2
 #
 #        - name: Set up QEMU
