--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-#This is a basic workflow
+#This is a basic workflow for serviapp
 name: CI-CD
 
 # Controls when the action will run. 
@@ -10,6 +10,7 @@ on: [push] #to any branch
   #workflow_dispatch:
   
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
   # This workflow contains multiple jobs
 
@@ -17,33 +18,34 @@ jobs:
       # The type of runner that the job will run on
 
       runs-on: ubuntu-latest
+      defaults:
+        run:
+          shell: bash -ileo pipefail {0} 
 #Deploy dev      
       if: github.ref == 'refs/heads/Develop' # run this job only for the dev branch
-
       steps:
-        - name: checkout repo
-          uses: actions/checkout@v2
-
-        - name: Set up QEMU
-          uses: docker/setup-qemu-action@v1
-      
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-
-        - name: Login to DockerHub
-          uses: docker/login-action@v1
-          with:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-        - name: Build and push Back
-          uses: docker/build-push-action@v2
-          with:
-            context: ./Back
-            file: ./Back/Dockerfile
-            push: true
-            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp:back-${{ github.ref_name }}
-#deploy frontend
+#        - name: checkout repo#
+#          uses: actions/checkout@v2
+#
+#        - name: Set up QEMU
+#          uses: docker/setup-qemu-action@v1
+#      
+#        - name: Set up Docker Buildx
+#          uses: docker/setup-buildx-action@v1
+#
+#        - name: Login to DockerHub
+#          uses: docker/login-action@v1
+#          with:
+#            username: ${{ secrets.DOCKERHUB_USERNAME }}
+#            password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      
+#        - name: Build and push Back
+#          uses: docker/build-push-action@v2
+#          with:
+#            context: ./Back
+#            file: ./Back/Dockerfile
+#            push: true
+#            tags: ${{ secrets.DOCKERHUB_USERNAME }}/serviapp:back-${{ github.ref_name }}
         - name: checkout repo
           uses: actions/checkout@v2
 
@@ -65,18 +67,16 @@ jobs:
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts
-                  
-        - name: run script stop container and clean
+        #Back          
+        - name: Deploy Back
           run: |
+              rsync -ra --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/dev/c16-28-n-node-react/Back/
               ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
-        - name: run script run container
-          run: |
-              ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev2.sh
-        #test 3
-        - name: Deploy with rsync
+        #Front
+        - name: Deploy Front
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
-              rsync -rav --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/dev.serviapp.solutions/public_html/
+              rsync -ra --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/dev.serviapp.solutions/public_html/
 
 #deploy QA
 
@@ -109,17 +109,16 @@ jobs:
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts                 
- #       - name: run script stop container and clean
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
- #       - name: run script run container
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev2.sh
-        #test 3
-        - name: Deploy with rsync
+        #Back          
+        - name: Deploy Back
+          run: |
+              rsync -ra --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/qa/c16-28-n-node-react/Back/
+              ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/qa/qa.sh
+        #Front
+        - name: Deploy Front
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
-              rsync -rav --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/qa.serviapp.solutions/public_html/
+              rsync -ra --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/qa.serviapp.solutions/public_html/
 
 #deploy PROD
 
@@ -152,15 +151,14 @@ jobs:
               install -m 600 -D /dev/null ~/.ssh/id_rsa
               echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
               ssh-keyscan serviapp.solutions > ~/.ssh/known_hosts                 
- #       - name: run script stop container and clean
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev.sh
- #       - name: run script run container
- #         run: |
- #             ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/dev/dev2.sh
-        #test 3
+        #Back          
+        - name: Deploy Back
+          run: |
+              rsync -ra --delete Back/ ubuntu@serviapp.solutions:/home/ubuntu/serviapp/prod/c16-28-n-node-react/Back/
+              ssh -f ubuntu@${{ secrets.SSH_HOST }} /home/ubuntu/serviapp/prod/prod.sh
+        #Front
         - name: Deploy with rsync
           run: |
               echo "${{ secrets.OPT_SRV }}" > Front/dist/.htaccess
-              rsync -rav --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/production.serviapp.solutions/public_html/
+              rsync -ra --delete Front/dist/ ubuntu@serviapp.solutions:/var/www/production.serviapp.solutions/public_html/
 
