--- a/Back/package.json
+++ b/Back/package.json
@@ -4,7 +4,7 @@
   "description": "ServiApp - Not country",
   "main": "Server.js",
   "scripts": {
-    "start": "node --watch Server.js"
+    "start": "node Server.js"
   },
   "author": "c16-28-n-node-react",
   "license": "ISC",
