--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,9 @@ jobs:
           uses: actions/checkout@v2
           
         - name: set env
-          working-directory: ./Front
-          run: echo "${{ secrets.ENV_DEV }}" > .env
+          env:
+            VITE_BASE_URL: 'https://dev.serviapp.solutions:3001'
+          run: echo "${{ secrets.ENV_DEV }}" > ./Front/.env
 
         - name: Use Node.js 16 LTS
           uses: actions/setup-node@v2
