--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,9 +50,10 @@ jobs:
           uses: actions/checkout@v2
           
         - name: set env
+          run: echo "${{ secrets.ENV_DEV }}" > ./Front/.env
           env:
             VITE_BASE_URL: 'https://dev.serviapp.solutions:3001'
-          run: echo "${{ secrets.ENV_DEV }}" > ./Front/.env
+
 
         - name: Use Node.js 16 LTS
           uses: actions/setup-node@v2
@@ -97,9 +98,9 @@ jobs:
           uses: actions/checkout@v2
           
         - name: set env qa
+          run: echo "${{ secrets.ENV_QA }}" > ./Front/.env
           env:
             VITE_BASE_URL: 'https://qa.serviapp.solutions:4001'
-            run: echo "${{ secrets.ENV_QA }}" > ./Front/.env
 
         - name: Use Node.js 16 LTS
           uses: actions/setup-node@v2
@@ -144,9 +145,9 @@ jobs:
           uses: actions/checkout@v2
           
         - name: set env prod
+          run: echo "${{ secrets.ENV_PRO }}" > ./Front/.env
           env:
-            VITE_BASE_URL: 'https://dev.serviapp.solutions:3001'
-            run: echo "${{ secrets.ENV_PRO }}" > ./Front/.env
+            VITE_BASE_URL: 'https://serviapp.solutions:5001'
 
         - name: Use Node.js 16 LTS
           uses: actions/setup-node@v2
